--- a/.github/workflows/aseprite_build_deploy.yml
+++ b/.github/workflows/aseprite_build_deploy.yml
@@ -1,11 +1,6 @@
 name: Build and deploy Aseprite
 
-on:
-  schedule:
-    - cron: '0 0 * * 1'
-  push:
-    branches:
-      - master
+on: workflow_dispatch
 
 env:
   BUILD_TYPE: Release
